modification lien dans le nav bar

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             </div>
         </div>
         <!-- contenu de la présentation -->
-        <div class="row" data-aos="zoom-in-up">
+        <div class="row" data-aos="zoom-in-up" id="experience">
             <div class="col-12 text-center bg-dark py-3 couleurTitre">
                 Expériences
             </div>
@@ -343,7 +343,7 @@
             </div>
         </div>
         <!-- contenu loisir -->
-        <div class="row" data-aos="zoom-in-up">
+        <div class="row" data-aos="zoom-in-up" id="contact">
             <div class="col-12 text-center bg-dark py-3 couleurTitre">
                 Contacts
             </div>
